app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dwk-app-svc
          servicePort: 2345
